# md-tui

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  dist-workspace.toml  flake.nix
.github/workflows/: release.yml  test.yaml
example/: scroll.rs
examples/: demo.rs
src/: config.rs  event_handler.rs  keyboard.rs  lib.rs  main.rs  markdown_render.rs  md.pest  nodes.rs  parser.rs  render_helper.rs  renderer.rs  search.rs  searchbox.rs  util.rs  utils.rs
src/boxes/: errorbox.rs  help_box.rs  linkbox.rs  mod.rs  searchbox.rs
src/highlight/: bash.rs  c.rs  cpp.rs  css.rs  diff.rs  elixir.rs  go.rs  html.rs  java.rs  javascript.rs  json.rs  lua.rs  luau.rs  mod.rs  nu.rs  ocaml.rs  php.rs  protobuf.rs  python.rs  rust.rs  scala.rs  toml.rs  tsx.rs  typescript.rs  yaml.rs
src/nodes/: image.rs  mod.rs  root.rs  textcomponent.rs  word.rs
src/pages/: file_explorer.rs  markdown_renderer.rs  md_renderer.rs  mod.rs
src/util/: colors.rs  general.rs  keys.rs
test-files/: nushell-highlight.md  toml-highlight.md
