[package]
name = "md-tui"
version = "0.8.7"
edition = "2021"
authors = ["Henrik Tøn Løvhaug"]
description = "A terminal markdown viewer"
readme = "README.md"
license = "AGPL-3.0-or-later"
repository = "https://github.com/henriklovhaug/md-tui"
homepage = "https://github.com/henriklovhaug/md-tui"
keywords = ["markdown", "terminal", "viewer", "tui"]
categories = ["command-line-interface", "command-line-utilities"]

[[bin]]
name = "mdt"
path = "src/main.rs"

[features]
default = ["tree-sitter", "network"]
tree-sitter = [
  "tree-sitter-bash",
  "tree-sitter-c",
  "tree-sitter-cpp",
  "tree-sitter-css",
  "tree-sitter-elixir",
  "tree-sitter-go",
  "tree-sitter-html",
  "tree-sitter-java",
  "tree-sitter-javascript",
  "tree-sitter-json",
  "tree-sitter-lua",
  "tree-sitter-luau-fork",
  "tree-sitter-ocaml",
  "tree-sitter-php",
  "tree-sitter-python",
  "tree-sitter-rust",
  "tree-sitter-scala",
  "tree-sitter-typescript",
  "tree-sitter-yaml"
]
network = ["ureq"]

[dependencies]
ratatui = { version = "0.28.1", features = ["macros", "all-widgets", "serde"] }
crossterm = "0.28.1"
ratatui-image = { version = "2.0.1", features = ["crossterm"] }
better-panic = "0.3.0"
config = "0.14.0"
dirs = "5.0.1"
image = { version = "0.25.4", default-features = false }
itertools = "0.13.0"
lazy_static = "1.5.0"
notify = "6.1.1"
open = "5.3.0"
pest = "2.7.14"
pest_derive = "2.7.14"
serde = { version = "1.0.210", features = ["derive"] }
strsim = "0.11.1"
ureq = { version = "2.10.1", optional = true }
tree-sitter-highlight = "0.21.0"
tree-sitter-bash = { version = "0.21.0", optional = true }
tree-sitter-c = { version = "0.21.4", optional = true }
tree-sitter-cpp = { version = "0.22.3", optional = true }
tree-sitter-css = { version = "0.21.1", optional = true }
tree-sitter-elixir = { version = "0.2.0", optional = true }
tree-sitter-go = { version = "0.21.2", optional = true }
tree-sitter-html = { version = "0.20.4", optional = true }
tree-sitter-java = { version = "0.21.0", optional = true }
tree-sitter-javascript = { version = "0.21.4", optional = true }
tree-sitter-json = { version = "0.21.0", optional = true }
tree-sitter-lua = { version = "0.1.0", optional = true }
tree-sitter-luau-fork = { version = "0.1.3", optional = true }
tree-sitter-ocaml = { version = "0.21.2", optional = true }
tree-sitter-php = { version = "0.22.8", optional = true }
tree-sitter-python = { version = "0.21.0", optional = true }
tree-sitter-rust = { version = "0.21.2", optional = true }
tree-sitter-scala = { version = "0.21.0", optional = true }
tree-sitter-typescript = { version = "0.21.2", optional = true }
tree-sitter-yaml = { version = "0.6.1", optional = true }

[build-dependencies]
cc="1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.21.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu"]
# Which actions to run on pull requests
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = true
# Path that installers should place binaries in
install-path = "CARGO_HOME"
