[package]
name = "md-tui"
version = "0.9.1"
edition = "2024"
authors = ["Henrik Tøn Løvhaug"]
description = "A terminal markdown viewer"
readme = "README.md"
license = "AGPL-3.0-or-later"
repository = "https://github.com/henriklovhaug/md-tui"
homepage = "https://github.com/henriklovhaug/md-tui"
keywords = ["markdown", "terminal", "viewer", "tui"]
categories = ["command-line-interface", "command-line-utilities"]

[[bin]]
name = "mdt"
path = "src/main.rs"

[features]
default = ["tree-sitter", "network"]
tree-sitter = [
  "tree-sitter-bash",
  "tree-sitter-c",
  "tree-sitter-cpp",
  "tree-sitter-css",
  "tree-sitter-elixir",
  "tree-sitter-go",
  "tree-sitter-html",
  "tree-sitter-java",
  "tree-sitter-javascript",
  "tree-sitter-json",
  "tree-sitter-lua",
  "tree-sitter-luau-fork",
  "tree-sitter-ocaml",
  "tree-sitter-php",
  "tree-sitter-python",
  "tree-sitter-rust",
  "tree-sitter-scala",
  "tree-sitter-typescript",
  "tree-sitter-yaml"
]
network = ["ureq"]

[dependencies]
ratatui = { version = "0.29.0", features = ["macros", "all-widgets", "serde"] }
crossterm = { version = "0.29.0", features = ["use-dev-tty"] }
ratatui-image = { version = "9.0.0" }
better-panic = "0.3.0"
config = "0.15.19"
dirs = "6.0.0"
image = { version = "0.25.9", default-features = false }
itertools = "0.14.0"
notify = "8.2.0"
open = "5.3.3"
pest = "2.8.4"
pest_derive = "2.8.4"
serde = { version = "1.0.228", features = ["derive"] }
strsim = "0.11.1"
ureq = { version = "3.1.4", optional = true }
tree-sitter-highlight = "0.25.10"
tree-sitter-bash = { version = "0.25.1", optional = true }
tree-sitter-c = { version = "0.24.1", optional = true }
tree-sitter-cpp = { version = "0.23.4", optional = true }
tree-sitter-css = { version = "0.25.0", optional = true }
tree-sitter-elixir = { version = "0.3.4", optional = true }
tree-sitter-go = { version = "0.25.0", optional = true }
tree-sitter-html = { version = "0.23.2", optional = true }
tree-sitter-java = { version = "0.23.5", optional = true }
tree-sitter-javascript = { version = "0.25.0", optional = true }
tree-sitter-json = { version = "0.24.8", optional = true }
tree-sitter-lua = { version = "0.2.0", optional = true }
tree-sitter-luau-fork = { version = "0.1.3", optional = true }
tree-sitter-ocaml = { version = "0.24.2", optional = true }
tree-sitter-php = { version = "0.24.2", optional = true }
tree-sitter-python = { version = "0.25.0", optional = true }
tree-sitter-rust = { version = "0.24.0", optional = true }
tree-sitter-scala = { version = "0.24.0", optional = true }
tree-sitter-typescript = { version = "0.23.2", optional = true }
tree-sitter-yaml = { version = "0.7.2", optional = true }

[build-dependencies]
cc="1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.28.6"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu"]
# Which actions to run on pull requests
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = true
# Path that installers should place binaries in
install-path = "CARGO_HOME"
